--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>Yew App</title>
+    <title>Drogue Websocket Integration Example</title>
+    <link data-trunk rel="sass" href="node_modules/@patternfly/patternfly/patternfly.scss" />
+    <link data-trunk rel="sass" href="node_modules/@patternfly/patternfly/patternfly-addons.scss" />
+    <link data-trunk rel="copy-file" href="static/images/logo.png" />
   </head>
 </html>
